add function count

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
 
         <div class="container">
             <div id="canvasposition" class="row">
-                <div class="col-md-2">
-                    <span> Score: <n id="score">0</n></span>
-                </div>
-                <div class="col-md-6">
+   
+                <div class="col-6">
                     
-                    <canvas id="stage" width="700" height="400">
-                    </canvas>
+                    <canvas id="stage" width="700" height="400"></canvas>
+                <br>
+                    <span> Score: <n id="score"> 0</n></span>
+
                 </div>
-                <div id="tablecontainer" class="col-md-3">
+                <div id="tablecontainer" class="col-3 row ">
                     <table>
                         <tr>
                             <th>Score</th>
