--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
 <body onload="init();">
     <header>
-        <div class="container">
+        <div id = "titleHeader" class="container">
             <div class="col-sm-12">
                 <h1>Snake Game by 4bsal</h1>
             </div>
@@ -18,7 +18,7 @@
     <div class="bgendalert">
         <div class="endscreen">
             <form action="post">
-                <span> Score: <n id="score">0</n></span>
+                <span> Pontos: <p id="score">0</p></span>
             </form>
             <form action="post">
                 <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Digite seu nick!">
@@ -29,15 +29,15 @@
 
         <div class="container">
             <div id="canvasposition" class="row">
-   
+                <div class="col-2">
+                    <span> Score: <p id="score"> 0</p></span>
+                </div>
                 <div class="col-6">
                     
                     <canvas id="stage" width="700" height="400"></canvas>
-                <br>
-                    <span> Score: <n id="score"> 0</n></span>
 
                 </div>
-                <div id="tablecontainer" class="col-3 row ">
+                <div id="tablecontainer" class="col-4 row ">
                     <table>
                         <tr>
                             <th>Score</th>
